--- a/app/static/css/instellingen.css
+++ b/app/static/css/instellingen.css
@@ -131,7 +131,7 @@ body {
 
 /* Donkere modus */
 body.dark-mode {
-  background-color: #1e1e1e;
+  background-color: #1a1a1a;
   color: white;
 }
 
