--- a/app/static/css/admin_simulatie.css
+++ b/app/static/css/admin_simulatie.css
@@ -518,3 +518,28 @@ h2 {
   border-radius: 5px;
   margin: 20px 0;
 }
+
+body.dark-mode .sidebar.close ~ .home {
+    background: #1e1e1e;
+}
+
+body.dark-mode .inline-form{
+    background: #1e1e1e;
+}
+
+body.dark-mode .sidebar {
+    background: #1e1e1e ;
+}
+
+body.dark-mode .home{
+    background: #1e1e1e ;
+}
+
+body.dark-mode .sidebar li{
+    background: #1e1e1e;
+}
+
+body.dark-mode .ul.li {
+    background: #1e1e1e;
+
+}
