--- a/app/static/css/admin_stationstatus.css
+++ b/app/static/css/admin_stationstatus.css
@@ -258,3 +258,16 @@ body {
 .sidebar.close {
   width: 88px;
 }
+
+body.dark-mode .sidebar{
+  background: #1e1e1e;
+}
+
+body.dark-mode .home {
+  background: #1a1a1a;
+}
+
+body.dark-mode .fixed-header-table td  {
+  background: #1e1e1e;
+  color: white;
+}
