--- a/app/static/css/contact.css
+++ b/app/static/css/contact.css
@@ -3,7 +3,7 @@ body {
 }
 
 body.dark-mode {
-  background-color: #1e1e1e;
+  background-color: #1a1a1a;
   color: white;
 }
 
@@ -186,7 +186,7 @@ body.dark-mode .footerwrapper{
   height: 80vh;
   background-repeat: no-repeat;
   margin: 20px;
-  background-color: #1e1e1e;
+  background-color: #2a2a2a;
   border-radius: 20px;
 }
 .socials {
