--- a/app/static/css/maps.css
+++ b/app/static/css/maps.css
@@ -96,6 +96,10 @@ body.dark-mode #search-container button:hover {
     color: #D41444;
 }
 
+body.dark-mode .main {
+    background: #2a2a2a;
+}
+
 body.dark-mode #show-all-container button {
     border: 3px solid white;
     color: white;
