--- a/app/templates/admin_simulatie.html
+++ b/app/templates/admin_simulatie.html
@@ -1,6 +1,7 @@
 {% extends 'base_admin.html' %}
 
 {% block head %}
+<link rel="stylesheet" href="{{ url_for('static', filename='css/base_admin.css') }}">
 <link rel="stylesheet" href="{{ url_for('static', filename='css/admin_simulatie.css') }}">
 {% endblock %}
 
