--- a/app/static/css/contact.css
+++ b/app/static/css/contact.css
@@ -22,7 +22,7 @@ body.dark-mode {
 }
 
 body.dark-mode .card-item {
-  background-color: #2a2a2a;
+  background-color: #1f1f1f;
   color: white;
 }
 
@@ -186,7 +186,7 @@ body.dark-mode .footerwrapper{
   height: 80vh;
   background-repeat: no-repeat;
   margin: 20px;
-  background-color: #2a2a2a;
+  background-color: #1f1f1f;
   border-radius: 20px;
 }
 .socials {
