--- a/app/static/css/maps.css
+++ b/app/static/css/maps.css
@@ -40,7 +40,7 @@ body.dark-mode .info.legend {
 }
 
 body.dark-mode #search-input {
-    background-color: #2a2a2a;
+    background-color: #1f1f1f;
     color: white;
     border: 1px solid #555;
 }
@@ -151,7 +151,7 @@ body.dark-mode #station-list-container {
 }
 
 body.dark-mode #station-list li {
-    background-color: #2a2a2a;
+    background-color: #1a1a1a;
     color: white;
     border: 1px solid #555;
 }
