--- a/app/static/css/admin_simulatie.css
+++ b/app/static/css/admin_simulatie.css
@@ -520,7 +520,7 @@ h2 {
 }
 
 body.dark-mode .sidebar.close ~ .home {
-    background: #1e1e1e;
+    background: #1a1a1a;
 }
 
 body.dark-mode .inline-form{
@@ -539,7 +539,16 @@ body.dark-mode .sidebar li{
     background: #1e1e1e;
 }
 
-body.dark-mode .ul.li {
+body.dark-mode .stats ul li {
     background: #1e1e1e;
 
+}
+
+body.dark-mode .scrollbox {
+    background: #1e1e1e;
+    border:none
+}
+
+body.dark-mode .fixed-header-table th{
+    border-bottom: none;
 }
