--- a/app/static/css/defect.css
+++ b/app/static/css/defect.css
@@ -56,7 +56,7 @@ body.dark-mode .card-wrapper {
 }
 
 body.dark-mode .card-slider .card-item {
-  background-color: #2a2a2a;
+  background-color: #1f1f1f;
   color: white;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
 }
