--- a/app/static/css/help.css
+++ b/app/static/css/help.css
@@ -92,7 +92,7 @@ details summary {
 }
 
 body.dark-mode details summary {
-  background-color: #2a2a2a;
+  background-color: #1f1f1f;
   color: white;
   border: 1px solid #555;
 }
