--- a/app/static/css/tarieven.css
+++ b/app/static/css/tarieven.css
@@ -123,7 +123,7 @@ body.dark-mode {
 }
 
 body.dark-mode .card-item {
-    background-color: #2a2a2a;
+    background-color: #1f1f1f;
     color: white;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
     border: none;
