darkmode knoppen 404 pagina inorde

--- a/app/static/css/live_data.css
+++ b/app/static/css/live_data.css
@@ -169,3 +169,7 @@ body.dark-mode .stat-card5 {
   background: #1e1e1e;
   color: whitesmoke;
 }
+
+body.dark-mode .stat-card5 p {
+  color: white !important;
+}
