--- a/app/templates/404.html
+++ b/app/templates/404.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 
+{% block head %}
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/404.css') }}">
+{% endblock %}
+
 {% block title %}{{ _('404 - Niet gevonden') }}{% endblock %}
 
 {% block content %}
