bvoor dagpas en weekpas is het ook verplicht om ingelogd te zijn

--- a/app/static/css/bedankt.css
+++ b/app/static/css/bedankt.css
@@ -112,3 +112,8 @@ button[type="submit"]:hover {
 body.dark-mode .card-item{
   background-color: #1f1f1f;
 }
+
+body.darkmode terug-btn {
+  border: white;
+  color: white;
+}
