--- a/app/templates/base_admin.html
+++ b/app/templates/base_admin.html
@@ -27,7 +27,8 @@
             </li>
             <ul class="menu-links">
                 <li class="nav-link"><a href="{{ url_for('routes.admin') }}"><i class='bx bx-home-alt icon'></i><span class="text nav-text">{{ _('Dashboard') }}</span></a></li>
-                <li class="nav-link"><a href="{{ url_for('routes.admin_simulatie') }}"><i class='bx bx-stats icon'></i><span class="text nav-text">{{ _('Admin') }}</span></a></li>
+                <li class="nav-link"><a href="{{ url_for('routes.admin_livedata') }}"><i class='bx bx-stats icon'></i><span class="text nav-text">{{ _('Live data') }}</span></a></li>
+                <li class="nav-link"><a href="{{ url_for('routes.admin_simulatie') }}"><i class='bx bx-stats icon'></i><span class="text nav-text">{{ _('Simulatie') }}</span></a></li>
                 <li class="nav-link"><a href="{{ url_for('routes.admin_data') }}"><i class='bx bx-bell icon'></i><span class="text nav-text">{{ _('Notifications') }}</span></a></li>
                 <li class="nav-link"><a href="#"><i class='bx bx-pie-chart-alt icon'></i><span class="text nav-text">{{ _('Analytics') }}</span></a></li>
 
