css aanpassingen admin

--- a/app/static/css/admin_simulatie.css
+++ b/app/static/css/admin_simulatie.css
@@ -553,3 +553,12 @@ body.dark-mode .scrollbox {
 body.dark-mode .fixed-header-table th{
     border-bottom: none;
 }
+
+body.dark-mode .fixed-header-table td{
+    background: #1e1e1e;
+}
+
+body.dark-mode .fixed-header-table tr{
+    color: white;
+    background: black;
+}
