--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -183,6 +183,7 @@ body.dark-mode .div3{
   margin: 20px;
   background-color: white;
   border-radius: 20px;
+  box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.35);
 }
 
 body.dark-mode .footerwrapper{
