--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -434,6 +434,8 @@ body.dark-mode .dark-toggle-btn:hover {
     cursor: pointer;
     padding: 0.5rem;
     color: white;
+    margin-left: auto;
+    margin-right: 10px;
     z-index: 1000;
   }
 }
