--- a/app/templates/base_admin.html
+++ b/app/templates/base_admin.html
@@ -25,10 +25,9 @@
     <div class="menu-bar">
         <div class="menu">
 
-            </li>
             <ul class="menu-links">
                 <li class="nav-link"><a href="{{ url_for('routes.admin') }}"><i class='bx bx-home-alt icon'></i><span class="text nav-text">{{ _('Dashboard') }}</span></a></li>
-                <li class="nav-link"><a href="{{ url_for('routes.admin_livedata') }}"><i class='bx bx-stats icon'></i><span class="text nav-text">{{ _('Live data') }}</span></a></li>
+                <li class="nav-link"><a href="{{ url_for('routes.admin_livedata') }}"><i class='bx  bx-broadcast icon'></i> <span class="text nav-text">{{ _('Live data') }}</span></a></li>
                 <li class="nav-link"><a href="{{ url_for('routes.admin_simulatie') }}"><i class='bx bx-stats icon'></i><span class="text nav-text">{{ _('Simulatie') }}</span></a></li>
                 <li class="nav-link"><a href="{{ url_for('routes.admin_data') }}"><i class='bx bx-bell icon'></i><span class="text nav-text">{{ _('Notifications') }}</span></a></li>
                 <li class="nav-link"><a href="{{ url_for('routes.admin_filter') }}"><i class='bx bx-pie-chart-alt icon'></i><span class="text nav-text">{{ _('Analytics') }}</span></a></li>
@@ -38,18 +37,7 @@
 
         <div class="bottom-content">
             <button id="darkModeToggle" class="dark-toggle-btn" >🌙</button>
-            <li><a href="{{ url_for('routes.logout') }}"><i class='bx bx-log-out icon'></i><span class="text nav-text">Logout</span></a></li>
-
-           <!---< <li class="mode">
-                <div class="sun-moon">
-                    <i class='bx bx-moon icon moon'></i>
-                    <i class='bx bx-sun icon sun'></i>
-                </div>
-                <span class="mode-text text">{{ _('Dark mode') }}</span>
-                <div class="toggle-switch">
-                    <span class="switch"></span>
-                </div> -->
-            </li>
+            <li><a href="{{ url_for('routes.logout') }}"><i class='bx bx-log-out icon'></i></a></li>
         </div>
     </div>
 </nav>
