aanpassing tekst adminpagina pop-up

--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -29,11 +29,11 @@
 <!-- pop-up -->
 <div id="admin-popup-overlay">
     <div id="admin-popup">
-        <h3>{{  _('Verder gaan met de huidige simulatie of een nieuwe starten?') }}</h3>
-        <button class="button-popup" id="doorgaan-button">{{ _('Doorgaan') }}</button>
-        <button class="button-popup" id="nieuwe-button">{{ _('Nieuwe simulatie') }}</button>
+        <h3>{{  _('Verder gaan met de live data of een simulatie starten?') }}</h3>
+        <button class="button-popup" id="doorgaan-button">{{ _('Live data') }}</button>
+        <button class="button-popup" id="nieuwe-button">{{ _('Simulatie') }}</button>
         <button class="button-pu-startpagina" id="startpagina-button"><i class='bx bx-home-alt icon'></i>
-{{  _('Startpagina') }}</button>
+{{  _('Dashboard') }}</button>
     </div>
 </div>
 {% endblock %}
