--- a/app/templates/base_admin.html
+++ b/app/templates/base_admin.html
@@ -31,6 +31,7 @@
                 <li class="nav-link"><a href="{{ url_for('routes.admin_simulatie') }}"><i class='bx bx-stats icon'></i><span class="text nav-text">{{ _('Simulatie') }}</span></a></li>
                 <li class="nav-link"><a href="{{ url_for('routes.admin_data') }}"><i class='bx bx-bell icon'></i><span class="text nav-text">{{ _('Notifications') }}</span></a></li>
                 <li class="nav-link"><a href="{{ url_for('routes.admin_filter') }}"><i class='bx bx-pie-chart-alt icon'></i><span class="text nav-text">{{ _('Analytics') }}</span></a></li>
+                <li class="nav-link"><a href="{{ url_for('routes.transport_dashboard') }}"><i class='bx bxs-dashboard icon'></i><span class="text nav-text">{{ _('Transport') }}</span></a></li>
 
             </ul>
         </div>
