Fiets inhuren helemaal af + Responsive maken van Hamburger en Index

--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -187,6 +187,14 @@ a {
   cursor: pointer;
 }
 
+.hamprofile{
+  display: none; /* Verberg standaard */
+  background: none;
+  border: none;
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+
 .menu-toggle {
   display: none;
 }
@@ -383,9 +391,8 @@ body.dark-mode .dark-toggle-btn:hover {
 /* ====== Responsive Design ======= */
 @media (max-width: 1175px) {
   .nav-links {
-    position: fixed;
-    top: 56px;
-    left: 0;
+    position: absolute;
+    top: 92px;
     right: 0;
     background: #2c2c2c;
     flex-direction: column;
@@ -397,8 +404,10 @@ body.dark-mode .dark-toggle-btn:hover {
 
   .menu-toggle:checked + .hamburger + .nav-links {
     max-height: 500px;
+    width: 20rem;
     padding: 1rem 0;
     border-top: 1px solid #444;
+    z-index: 10;
   }
 
   .nav-links.open {
@@ -437,5 +446,62 @@ body.dark-mode .dark-toggle-btn:hover {
     margin-left: auto;
     margin-right: 10px;
     z-index: 1000;
+  }
+
+  .hamprofile{
+    display: block;
+    background: none;
+    border: none;
+    font-size: 1.5rem;
+    cursor: pointer;
+    padding: 0.5rem;
+    color: white;
+    margin-right: 10px;
+    z-index: 1000;
+  }
+
+  .nav-buttons {
+    position: absolute;
+    top: 92px;
+    right: 0;
+    background: #2c2c2c;
+    flex-direction: column;
+    overflow: hidden;
+    max-height: 0;
+    transition: max-height 0.3s ease-out;
+    z-index: 999;
+    width: 20rem;
+    padding: 0;
+  }
+
+  #nav-button-toggle:checked + .a-toggle + .nav-buttons {
+    max-height: 500px;
+    padding: 1rem 0;
+    border-top: 1px solid #444;
+  }
+
+  .nav-buttons a,
+  .nav-buttons button {
+    padding: 1rem;
+    text-align: left;
+    border-bottom: 1px solid #ddd;
+    background: transparent;
+    width: 100%;
+  }
+
+  .dark-toggle-btn {
+    background-color: transparent;
+    border: none;
+    color: white;
+    font-weight: bold;
+  }
+
+  body.dark-mode .nav-buttons {
+    background-color: #1f1f1f;
+  }
+
+  body.dark-mode .nav-buttons a,
+  body.dark-mode .dark-toggle-btn {
+    color: white;
   }
 }
