--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -44,7 +44,12 @@
     </div>
   </nav>
 
-  <div class="nav-buttons">
+  <input type="checkbox" id="nav-button-toggle" class="menu-toggle" />
+  <label for="nav-button-toggle" class="hamprofile a-toggle" aria-label="Knoppenmenu openen">
+    A
+  </label>
+
+  <div class="nav-buttons slideout">
     <button id="darkModeToggle" class="dark-toggle-btn" style="right: 0.5rem;">🌗</button>
     {% if user or session.get('Gebruiker') %}
       <a href="{{ url_for('routes.profile') }}" class="profile">{{ _('Profiel') }}</a>
