--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,11 +10,11 @@
 
 <div class="div1">
   <div class="text-spot">
-    <span class="bigtext">{{ _('ANTWERPEN') }} <span class="clr-red">{{ _('BEWEEGT.') }}</span> <br>{{ _('JIJ') }} <span class="clr-red">{{ _('OOK?') }}</span></span>
+    <span class="bigtext">{{ _('ANTWERPEN') }} <span id="big-text-part" class="clr-red">{{ _('BEWEEGT.') }}</span><br id="break-size">{{ _('JIJ') }} <span class="clr-red">{{ _('OOK?') }}</span></span>
     <span class="smoltext">{{ _('Jouw rit, jouw stad, jouw tempo.') }}<br>
     {{ _('Als je vlot door de stad wil, huur je een deelfiets.') }} <br>
     {{ _('Gebruik Velo voor een dag, een week of een jaar.') }}</span>
-    <img style="margin-top: 5px" src="../static/images/component1.svg">
+    <img style="margin-top: 5px; width: calc(8vw + 40vw);" src="../static/images/component1.svg">
   </div>
 </div>
 
@@ -89,7 +89,7 @@
     <span class="smoltext">{{ _('Jouw rit, jouw stad, jouw tempo.') }}<br>
     {{ _('Neem een Velo en doorkruis de stad. Plaats een fiets na elke rit terug in een Velo-station naar keuze.') }} <br>
     {{ _('Gebruik Velo voor een dag, een week of een jaar.') }}</span>
-    <img style="margin-top: 5px" src="../static/images/component1.svg">
+    <img style="margin-top: 5px; width: calc(8vw + 40vw);" src="../static/images/component1.svg">
   </div>
 </div>
 
