--- a/app/templates/base_admin.html
+++ b/app/templates/base_admin.html
@@ -29,15 +29,14 @@
                 <li class="nav-link"><a href="{{ url_for('routes.admin') }}"><i class='bx bx-home-alt icon'></i><span class="text nav-text">{{ _('Dashboard') }}</span></a></li>
                 <li class="nav-link"><a href="{{ url_for('routes.admin_livedata') }}"><i class='bx  bx-broadcast icon'></i> <span class="text nav-text">{{ _('Live data') }}</span></a></li>
                 <li class="nav-link"><a href="{{ url_for('routes.admin_simulatie') }}"><i class='bx bx-stats icon'></i><span class="text nav-text">{{ _('Simulatie') }}</span></a></li>
-                <li class="nav-link"><a href="{{ url_for('routes.admin_data') }}"><i class='bx bx-bell icon'></i><span class="text nav-text">{{ _('Notifications') }}</span></a></li>
-                <li class="nav-link"><a href="{{ url_for('routes.admin_filter') }}"><i class='bx bx-pie-chart-alt icon'></i><span class="text nav-text">{{ _('Analytics') }}</span></a></li>
-
+                <li class="nav-link"><a href="{{ url_for('routes.admin_data') }}"><i class='bx bx-bell icon'></i><span class="text nav-text">{{ _('Notificaties') }}</span></a></li>
+                <li class="nav-link"><a href="{{ url_for('routes.admin_filter') }}"><i class='bx bx-pie-chart-alt icon'></i><span class="text nav-text">{{ _('Analyse') }}</span></a></li>
             </ul>
         </div>
 
         <div class="bottom-content">
             <button id="darkModeToggle" class="dark-toggle-btn" >🌙</button>
-            <li><a href="{{ url_for('routes.logout') }}"><i class='bx bx-log-out icon'></i></a></li>
+            <li><a href="{{ url_for('routes.logout') }}"><i class='bx bx-log-out icon'></i><span class="text nav-text">{{ _('Uitloggen') }}</span></a></li>
         </div>
     </div>
 </nav>
