fix route en html user_filter, nu kan je de resultaten zien

--- a/app/static/css/base_admin.css
+++ b/app/static/css/base_admin.css
@@ -2,7 +2,7 @@
     position: absolute;
     top: 0;
     left: 250px;
-    height: 100vh;
+    height: fit-content;
     width: calc(100% - 250px);
     background-color: var(--body-color);
     transition: var(--tran-05);
